--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,18 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.card {
+  color: white;
+  padding: 5px 15px;
+  margin: 10px;
+  border-radius: 4px;
+  font-weight: bold;
+  background: #6AD58B;
+}
+.title {
+  text-align: center;
+}
+.form {
+  padding: 10px;
+  margin: 0px 300px;
+}
